[package]
name = "gwogloader_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diffy = "0.3.0"
sha256 = "1.4.0"
zip-extract = "0.1.2"

[dependencies.reqwest]
version = "0.11.22"
features = ["blocking"]
